PCS BAckup 26Dec2023/Backup-Source/objects/GCP_100PCT_Analysis_SKU__c.object
<CustomObject>
    <description>This Object&apos;s Records are same for all the accounts.</description>
    <fields>
        <fullName>DRL_Act_Price__c</fullName>
        <label>DRL Act Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRL_Act_Sales__c</fullName>
        <label>DRL Act Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRL_Act_Tpt_Pct__c</fullName>
        <label>DRL Act  Tpt Pct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRL_Act_Tpt__c</fullName>
        <label>DRL Act Tpt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GCP_Product_Family__c</fullName>
        <label>GCP Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCP_Suggested_Price__c</fullName>
        <label>GCP Suggested Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GCP_Unique_Identifier__c</fullName>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Family</label>
        <referenceTo>Product_Family__c</referenceTo>
        <relationshipLabel>GCP 100PCT Analysis SKU</relationshipLabel>
        <relationshipName>GCP_100PCT_Analysis_SKU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prof_Month_Range__c</fullName>
        <label>Prof Month Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU_Code__c</fullName>
        <label>SKU Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Product_Family__c</fullName>
        <label>Vision Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vision Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>GCP 100PCT Analysis SKU</relationshipLabel>
        <relationshipName>GCP_100PCT_Analysis_SKU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Updated_date__c</fullName>
        <label>Vision Updated date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>drl_act_volume_eu__c</fullName>
        <label>DRL_ACT_Volume_Eu</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>GCP 100PCT Analysis SKU</label>
    <nameField>
        <displayFormat>100PCT-Analysis-SKU-{00000}</displayFormat>
        <label>GCP 100PCT Analysis SKU Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GCP 100PCT Analysis SKU</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>